Deploiment-K8S/01_namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: team-blue
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-green
